--- a/src/components/Auth/PasswordReset/PasswordReset.module.css
+++ b/src/components/Auth/PasswordReset/PasswordReset.module.css
@@ -1,61 +1,56 @@
-.container 
-  {
-    background-color: #fff;
-    display: flex;
-    flex-direction: column;
-    font: 12px 'Noto Sans KR', sans-serif;
-    justify-content: center;
-    align-items: center;
-    height: 100vh; 
-  }
-  
-  .title 
-  {
-    color: rgba(0, 0, 0, 0.8);
-    font-size: 24px;
-    font-weight: 700;
-    text-align: center;
-  }
-  .submitButton 
-  {  
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border: 5px;
-    border-radius: 10px;
-    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.1);
-    margin: 30px auto;
-    width: 100%;
-    width:275px;
-    height: 48px;
-    font-size: 20px;
-    color: rgba(56, 56, 56, 0.9);
-    font-weight: 700;
-    background-color: rgb(176, 224, 230);
-  }
-  
-  .footer {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 9px;
-    font: 14px 'Noto Sans KR', sans-serif;
-  }
-  
-  .footerText 
-  {
-    color: rgba(0, 0, 0, 0.8);
-    justify-content: center;
-    align-items: center;
-    font-weight: 500;
-    width:190px;
-  }
-  
-  .loginLink {
-    color: #0088ff;
-    font-weight: 700;
-    cursor: pointer;
-    width:50px;
-    margin-right:60px;
-    
-  }
+.container {
+  background-color: #fff;
+  display: flex;
+  flex-direction: column;
+  font: 12px "Noto Sans KR", sans-serif;
+  justify-content: center;
+  align-items: center;
+  height: 90vh;
+}
+
+.title {
+  color: rgba(0, 0, 0, 0.8);
+  font-size: 24px;
+  font-weight: 700;
+  text-align: center;
+}
+.submitButton {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 5px;
+  border-radius: 10px;
+  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.1);
+  margin: 30px auto;
+  width: 100%;
+  width: 275px;
+  height: 48px;
+  font-size: 20px;
+  color: rgba(56, 56, 56, 0.9);
+  font-weight: 700;
+  background-color: rgb(176, 224, 230);
+}
+
+.footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 9px;
+  font: 14px "Noto Sans KR", sans-serif;
+}
+
+.footerText {
+  color: rgba(0, 0, 0, 0.8);
+  justify-content: center;
+  align-items: center;
+  font-weight: 500;
+  width: 190px;
+}
+
+.loginLink {
+  color: #0088ff;
+  font-weight: 700;
+  cursor: pointer;
+  width: 50px;
+  margin-right: 60px;
+}
